--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ blinker==1.9.0
 boto3==1.38.14
 botocore==1.38.14
 certifi==2025.1.31
-cffi==1.17.1
+cffi==1.16.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
@@ -14,7 +14,9 @@ dj-database-url==2.3.0
 Django==5.1.5
 django-allauth==65.4.1
 django-crispy-forms==2.3
+django-cors-headers==4.6.0
 django-storages==1.14.6
+djangorestframework==3.15.2
 django-test-plus==2.2.4
 dnspython==2.7.0
 email_validator==2.2.0
