--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,15 @@ crispy-tailwind==1.0.3
 cryptography==44.0.0
 dj-database-url==2.3.0
 Django==5.1.5
+daphne==4.1.2
+channels==4.1.0
+channels-redis==4.2.0
 django-allauth==65.4.1
 django-crispy-forms==2.3
 django-cors-headers==4.6.0
 django-storages==1.14.6
 djangorestframework==3.15.2
+drf-spectacular==0.27.2
 django-test-plus==2.2.4
 dnspython==2.7.0
 email_validator==2.2.0
